--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,7 +15,14 @@ LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
 Suggests: 
-    testthat
+    testthat,
+    knitr,
+    rmarkdown
 Imports: 
     R6,
-    tidyr
+    tidyr,
+    dplyr,
+    stringr,
+    magrittr,
+    XML
+VignetteBuilder: knitr
