--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,9 +9,13 @@ export(xml_to_ds_vars)
 export(xml_to_value_spec)
 export(xml_to_var_spec)
 import(R6)
-import(XML)
 import(dplyr)
+import(pryr)
 import(purrr)
 import(stringr)
 import(tidyr)
+importFrom(XML,xmlElementsByTagName)
+importFrom(XML,xmlGetAttr)
+importFrom(XML,xmlNamespaceDefinitions)
+importFrom(XML,xmlValue)
 importFrom(magrittr,"%>%")
