--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,12 +10,14 @@ export(xml_to_value_spec)
 export(xml_to_var_spec)
 import(R6)
 import(dplyr)
-import(pryr)
 import(purrr)
 import(stringr)
 import(tidyr)
+importFrom(XML,getNodeSet)
 importFrom(XML,xmlElementsByTagName)
 importFrom(XML,xmlGetAttr)
 importFrom(XML,xmlNamespaceDefinitions)
+importFrom(XML,xmlTreeParse)
 importFrom(XML,xmlValue)
 importFrom(magrittr,"%>%")
+importFrom(stats,var)
