Add additional function to namespace

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ importFrom(XML,getNodeSet)
 importFrom(XML,xmlElementsByTagName)
 importFrom(XML,xmlGetAttr)
 importFrom(XML,xmlNamespaceDefinitions)
+importFrom(XML,xmlToDataFrame)
 importFrom(XML,xmlTreeParse)
 importFrom(XML,xmlValue)
 importFrom(magrittr,"%>%")
