--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,5 +21,10 @@ importFrom(XML,xmlNamespaceDefinitions)
 importFrom(XML,xmlToDataFrame)
 importFrom(XML,xmlTreeParse)
 importFrom(XML,xmlValue)
+importFrom(dplyr,filter)
+importFrom(dplyr,pull)
 importFrom(magrittr,"%>%")
+importFrom(purrr,map2)
 importFrom(stats,var)
+importFrom(tibble,as_tibble)
+importFrom(tibble,tibble)
