Working on updates to the spec builders, finished ds, ds_vars, and var_spec needs additional tables

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 
 # Session Data files
 .RData
+.gitignore
 
 # Example code in package build process
 *-Ex.R
@@ -36,3 +37,5 @@ vignettes/*.pdf
 rsconnect/
 .Rproj.user
 inst/doc
+tests/testthat/temp_data/*
+
