--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,8 +2,8 @@
 
 export("%>%")
 export(define_to_MetaCore)
-export(filter_dataset)
 export(metacore)
+export(select_dataset)
 export(xml_to_code_list)
 export(xml_to_derivations)
 export(xml_to_ds_spec)
