--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,8 @@ importFrom(dplyr,filter)
 importFrom(dplyr,pull)
 importFrom(magrittr,"%>%")
 importFrom(purrr,map2)
+importFrom(rlang,as_string)
+importFrom(rlang,prim_name)
 importFrom(stats,var)
 importFrom(tibble,as_tibble)
 importFrom(tibble,tibble)
