Finish the documentation for spec type builders

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,13 @@ export("%>%")
 export(define_to_MetaCore)
 export(metacore)
 export(select_dataset)
+export(spec_to_metacore)
+export(spec_type_to_code_list)
+export(spec_type_to_derivations)
+export(spec_type_to_ds_spec)
+export(spec_type_to_ds_vars)
+export(spec_type_to_value_spec)
+export(spec_type_to_var_spec)
 export(xml_to_code_list)
 export(xml_to_derivations)
 export(xml_to_ds_spec)
@@ -26,6 +33,8 @@ importFrom(dplyr,filter)
 importFrom(dplyr,pull)
 importFrom(magrittr,"%>%")
 importFrom(purrr,map2)
+importFrom(readxl,excel_sheets)
+importFrom(readxl,read_excel)
 importFrom(rlang,as_string)
 importFrom(rlang,prim_name)
 importFrom(stats,var)
