Update vingette +rename code_list to codelist

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,7 +5,7 @@ export(define_to_MetaCore)
 export(metacore)
 export(select_dataset)
 export(spec_to_metacore)
-export(spec_type_to_code_list)
+export(spec_type_to_codelist)
 export(spec_type_to_derivations)
 export(spec_type_to_ds_spec)
 export(spec_type_to_ds_vars)
