Add derivations and codelist tests

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,7 +11,7 @@ export(spec_type_to_ds_spec)
 export(spec_type_to_ds_vars)
 export(spec_type_to_value_spec)
 export(spec_type_to_var_spec)
-export(xml_to_code_list)
+export(xml_to_codelist)
 export(xml_to_derivations)
 export(xml_to_ds_spec)
 export(xml_to_ds_vars)
