Adding in tests / deleting the presentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,9 +3,11 @@
 export("%>%")
 export(define_to_MetaCore)
 export(metacore)
+export(metacore_example)
 export(read_all_sheets)
 export(select_dataset)
 export(spec_to_metacore)
+export(spec_type)
 export(spec_type_to_codelist)
 export(spec_type_to_derivations)
 export(spec_type_to_ds_spec)
