--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(xml_to_var_spec)
 import(R6)
 import(dplyr)
 import(purrr)
+import(rlang)
 import(stringr)
 import(tidyr)
 importFrom(XML,getNodeSet)
@@ -38,8 +39,6 @@ importFrom(magrittr,"%>%")
 importFrom(purrr,map2)
 importFrom(readxl,excel_sheets)
 importFrom(readxl,read_excel)
-importFrom(rlang,as_string)
-importFrom(rlang,prim_name)
 importFrom(stats,var)
 importFrom(tibble,as_tibble)
 importFrom(tibble,tibble)
