--- a/NAMESPACE
+++ b/NAMESPACE
@@ -59,6 +59,7 @@ importFrom(purrr,discard)
 importFrom(purrr,keep)
 importFrom(purrr,map)
 importFrom(purrr,map2)
+importFrom(purrr,map2_chr)
 importFrom(purrr,map2_lgl)
 importFrom(purrr,map_chr)
 importFrom(purrr,map_dfr)
@@ -90,6 +91,7 @@ importFrom(stringr,str_trim)
 importFrom(tibble,as_tibble)
 importFrom(tibble,tibble)
 importFrom(tibble,tribble)
+importFrom(tidyr,everything)
 importFrom(tidyr,nest)
 importFrom(tidyr,replace_na)
 importFrom(tidyr,unnest)
