--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,7 +24,7 @@ Authors@R:
              comment = c(ORCID = "0000-0001-6030-723X")),
       person(given = "Atorus Research LLC",
              role = c("cph", "fnd")),
-      person(given = "GlaxoSmithKline",
+      person(given = "GlaxoSmithKline LLC",
              role = c("cph", "fnd"))
              )
 Description: What the package does (one paragraph).
