--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: metacore
-Title: What the Package Does (One Line, Title Case)
+Title: A Centralized Metadata Object Focus on Clinical Trial Data Programming Workflows
 Version: 0.0.0.9000
 Authors@R: 
     c(person(given = "Christina",
