--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,11 +22,8 @@ Authors@R:
              role = "aut",
              email = "mike.stackhouse@atorusresearch.com",
              comment = c(ORCID = "0000-0001-6030-723X")),
-      person(given = "Atorus Research LLC",
-             role = c("cph", "fnd")),
-      person(given = "GlaxoSmithKline LLC",
-             role = c("cph", "fnd"))
-             )
+      person(given = "GSK/Atorus JPT",
+             role = c("cph", "fnd")))
 Description: Create an immutable container holding metadata for the purpose of better enabling programming activities and functionality of other packages within the clinical programming workflow.
 License: MIT + file LICENSE
 Encoding: UTF-8
