Updates related to elimination of c_across

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,7 +33,6 @@ importFrom(XML,xmlValue)
 importFrom(dplyr,anti_join)
 importFrom(dplyr,arrange)
 importFrom(dplyr,bind_rows)
-importFrom(dplyr,c_across)
 importFrom(dplyr,case_when)
 importFrom(dplyr,distinct)
 importFrom(dplyr,filter)
@@ -65,6 +64,7 @@ importFrom(purrr,map_chr)
 importFrom(purrr,map_dfr)
 importFrom(purrr,map_int)
 importFrom(purrr,map_lgl)
+importFrom(purrr,pmap_chr)
 importFrom(purrr,reduce)
 importFrom(readxl,excel_sheets)
 importFrom(readxl,read_excel)
@@ -86,6 +86,7 @@ importFrom(stringr,str_replace)
 importFrom(stringr,str_replace_all)
 importFrom(stringr,str_replace_na)
 importFrom(stringr,str_split)
+importFrom(stringr,str_starts)
 importFrom(stringr,str_subset)
 importFrom(stringr,str_trim)
 importFrom(tibble,as_tibble)
