Import `everything()` from {tidyselect}
Wile newer version of {tidyr}do re-export `everything()` this is not the case with legacy versions. Thus, on older systems the installation of {metacore} fails.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -92,7 +92,7 @@ importFrom(stringr,str_trim)
 importFrom(tibble,as_tibble)
 importFrom(tibble,tibble)
 importFrom(tibble,tribble)
-importFrom(tidyr,everything)
 importFrom(tidyr,nest)
 importFrom(tidyr,replace_na)
 importFrom(tidyr,unnest)
+importFrom(tidyselect,everything)
