--- a/.github/workflows/check-standard.yaml
+++ b/.github/workflows/check-standard.yaml
@@ -24,10 +24,13 @@ jobs:
         config:
           - {os: windows-latest, r: 'release'}
           - {os: macOS-latest, r: 'release'}
+          - {os: ubuntu-20.04, r: '3.5', repos: "https://cran.microsoft.com/snapshot/2019-03-11/"}
+          - {os: ubuntu-20.04, r: '3.6', repos: "https://cran.microsoft.com/snapshot/2020-02-29/"}
           - {os: ubuntu-20.04, r: 'release', rspm: "https://packagemanager.rstudio.com/cran/__linux__/focal/latest"}
           - {os: ubuntu-20.04, r: 'devel', rspm: "https://packagemanager.rstudio.com/cran/__linux__/focal/latest"}
 
     env:
+      REPOS: ${{ matrix.config.repos }}
       R_REMOTES_NO_ERRORS_FROM_WARNINGS: true
       RSPM: ${{ matrix.config.rspm }}
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
@@ -66,6 +69,8 @@ jobs:
 
       - name: Install dependencies
         run: |
+          repos <- Sys.getenv("REPOS")
+          if (repos != "") options(repos = repos)
           remotes::install_deps(dependencies = TRUE)
           remotes::install_cran("rcmdcheck")
         shell: Rscript {0}
