--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,7 @@ Authors@R:
              family = "Fillmore",
              role = c("aut", "cre"),
              email = "christina.e.fillmore@gsk.com",
-             comment = c(ORCID = "TODO")),
+             comment = c(ORCID = "0000-0003-0595-2302")),
       person(given = "Maya",
              family = "Gans",
              role = "aut",
