--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export("%>%")
 export(create_tbl)
 export(define_to_MetaCore)
+export(get_control_term)
 export(load_metacore)
 export(metacore)
 export(metacore_example)
@@ -70,7 +71,9 @@ importFrom(purrr,reduce)
 importFrom(readxl,excel_sheets)
 importFrom(readxl,read_excel)
 importFrom(rlang,"!!")
+importFrom(rlang,as_label)
 importFrom(rlang,as_string)
+importFrom(rlang,enexpr)
 importFrom(rlang,expr)
 importFrom(rlang,prim_name)
 importFrom(rlang,sym)
