Updating the description to remove the TODO next to Ashley's name. And adding the cran comments page as per hadley's suggestion

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,8 +15,7 @@ Authors@R:
       person(given = "Ashley",
              family = "Tarasiewicz",
              role = "aut",
-             email = "ashley.tarasiewicz@atorusresearch.com",
-             comment = c(ORCID = "TODO")),
+             email = "ashley.tarasiewicz@atorusresearch.com"),
       person(given = "Mike",
              family = "Stackhouse",
              role = "aut",
