This should make it easier for functions that call this function to pass a string or a quosure

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -72,6 +72,7 @@ importFrom(readxl,excel_sheets)
 importFrom(readxl,read_excel)
 importFrom(rlang,"!!")
 importFrom(rlang,as_label)
+importFrom(rlang,as_name)
 importFrom(rlang,as_string)
 importFrom(rlang,enexpr)
 importFrom(rlang,expr)
