Update yn_to_tf spec reader helper function to be more robust

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -80,6 +80,7 @@ importFrom(rlang,prim_name)
 importFrom(rlang,sym)
 importFrom(stats,na.omit)
 importFrom(stats,var)
+importFrom(stringr,regex)
 importFrom(stringr,str_c)
 importFrom(stringr,str_count)
 importFrom(stringr,str_detect)
