--- a/NAMESPACE
+++ b/NAMESPACE
@@ -94,6 +94,7 @@ importFrom(stringr,str_replace_na)
 importFrom(stringr,str_split)
 importFrom(stringr,str_starts)
 importFrom(stringr,str_subset)
+importFrom(stringr,str_to_lower)
 importFrom(stringr,str_trim)
 importFrom(tibble,as_tibble)
 importFrom(tibble,tibble)
