#49 Updating to work with predecessor and assigned values

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -67,6 +67,7 @@ importFrom(purrr,map_dfr)
 importFrom(purrr,map_int)
 importFrom(purrr,map_lgl)
 importFrom(purrr,pmap_chr)
+importFrom(purrr,quietly)
 importFrom(purrr,reduce)
 importFrom(readxl,excel_sheets)
 importFrom(readxl,read_excel)
