Upversioning and adding xml2 changes
var_spec, derivation, and codelist converted to xml2. Still a few bugs when run

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,13 +25,6 @@ export(xml_to_ds_vars)
 export(xml_to_value_spec)
 export(xml_to_var_spec)
 import(R6)
-importFrom(XML,getNodeSet)
-importFrom(XML,xmlElementsByTagName)
-importFrom(XML,xmlGetAttr)
-importFrom(XML,xmlNamespaceDefinitions)
-importFrom(XML,xmlToDataFrame)
-importFrom(XML,xmlTreeParse)
-importFrom(XML,xmlValue)
 importFrom(dplyr,anti_join)
 importFrom(dplyr,arrange)
 importFrom(dplyr,bind_rows)
@@ -104,3 +97,10 @@ importFrom(tidyr,nest)
 importFrom(tidyr,replace_na)
 importFrom(tidyr,unnest)
 importFrom(tidyselect,everything)
+importFrom(xml2,read_xml)
+importFrom(xml2,xml_attr)
+importFrom(xml2,xml_find_all)
+importFrom(xml2,xml_find_first)
+importFrom(xml2,xml_ns_strip)
+importFrom(xml2,xml_parent)
+importFrom(xml2,xml_text)
