--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,10 @@
 vignettes/*.html
 vignettes/*.pdf
 
+# Files to draft tests
+*/define_examples/*
+*.DS_Store
+
 # OAuth2 token, see https://github.com/hadley/httr/releases/tag/v0.3
 .httr-oauth
 
@@ -42,3 +46,4 @@ tests/testthat/temp_data/*
 docs
 doc
 Meta
+.DS_Store
