#56 Update issue with matches and select

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -62,6 +62,8 @@ importFrom(purrr,map_lgl)
 importFrom(purrr,pmap_chr)
 importFrom(purrr,quietly)
 importFrom(purrr,reduce)
+importFrom(purrr,safely)
+importFrom(purrr,set_names)
 importFrom(readxl,excel_sheets)
 importFrom(readxl,read_excel)
 importFrom(rlang,"!!")
@@ -97,6 +99,7 @@ importFrom(tidyr,nest)
 importFrom(tidyr,replace_na)
 importFrom(tidyr,unnest)
 importFrom(tidyselect,everything)
+importFrom(tidyselect,matches)
 importFrom(xml2,read_xml)
 importFrom(xml2,xml_attr)
 importFrom(xml2,xml_find_all)
