--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,7 @@ export(xml_to_ds_vars)
 export(xml_to_value_spec)
 export(xml_to_var_spec)
 import(R6)
+importFrom(dplyr,across)
 importFrom(dplyr,anti_join)
 importFrom(dplyr,arrange)
 importFrom(dplyr,bind_rows)
