--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: metacore
 Title: A Centralized Metadata Object Focus on Clinical Trial Data Programming Workflows
-Version: 0.1.2
+Version: 0.1.3
 Authors@R: 
     c(person(given = "Christina",
              family = "Fillmore",
@@ -27,7 +27,9 @@ Description: Create an immutable container holding metadata for the purpose of b
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE, r6 = FALSE)
-RoxygenNote: 7.2.1
+RoxygenNote: 7.3.1
+Depends: 
+    R (>= 3.6)
 Suggests: 
     testthat,
     knitr,
