--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,15 @@ export(xml_to_ds_vars)
 export(xml_to_value_spec)
 export(xml_to_var_spec)
 import(R6)
+importFrom(cli, ansi_collapse)
+importFrom(cli, cli_abort)
+importFrom(cli, cli_alert_info)
+importFrom(cli, cli_alert_success)
+importFrom(cli, cli_alert_warning)
+importFrom(cli, cli_end)
+importFrom(cli, cli_par)
+importFrom(cli, cli_rule)
+importFrom(cli, cli_text)
 importFrom(dplyr,across)
 importFrom(dplyr,anti_join)
 importFrom(dplyr,arrange)
