Format cli output and add required fcn to namespace

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,7 @@ export(xml_to_value_spec)
 export(xml_to_var_spec)
 import(R6)
 importFrom(cli, ansi_collapse)
+importFrom(cli, col_red)
 importFrom(cli, cli_abort)
 importFrom(cli, cli_alert_info)
 importFrom(cli, cli_alert_success)
