Add to namespace

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,6 +36,7 @@ importFrom(cli, cli_abort)
 importFrom(cli, cli_alert_info)
 importFrom(cli, cli_alert_success)
 importFrom(cli, cli_alert_warning)
+importFrom(cli, cli_bullets)
 importFrom(cli, cli_end)
 importFrom(cli, cli_par)
 importFrom(cli, cli_rule)
