--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,6 +37,7 @@ importFrom(cli, cli_alert_info)
 importFrom(cli, cli_alert_success)
 importFrom(cli, cli_alert_warning)
 importFrom(cli, cli_bullets)
+importFrom(cli, cli_div)
 importFrom(cli, cli_end)
 importFrom(cli, cli_par)
 importFrom(cli, cli_rule)
