--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(create_tbl)
 export(define_to_metacore)
 export(get_control_term)
 export(get_keys)
+export(is_DatasetMeta)
 export(is_metacore)
 export(load_metacore)
 export(metacore)
@@ -30,18 +31,17 @@ export(xml_to_ds_vars)
 export(xml_to_value_spec)
 export(xml_to_var_spec)
 import(R6)
-importFrom(cli, ansi_collapse)
-importFrom(cli, col_red)
-importFrom(cli, cli_abort)
-importFrom(cli, cli_alert_info)
-importFrom(cli, cli_alert_success)
-importFrom(cli, cli_alert_warning)
-importFrom(cli, cli_bullets)
-importFrom(cli, cli_div)
-importFrom(cli, cli_end)
-importFrom(cli, cli_par)
-importFrom(cli, cli_rule)
-importFrom(cli, cli_text)
+importFrom(cli,cli_abort)
+importFrom(cli,cli_alert_info)
+importFrom(cli,cli_alert_success)
+importFrom(cli,cli_alert_warning)
+importFrom(cli,cli_bullets)
+importFrom(cli,cli_div)
+importFrom(cli,cli_end)
+importFrom(cli,cli_par)
+importFrom(cli,cli_rule)
+importFrom(cli,cli_text)
+importFrom(cli,col_red)
 importFrom(dplyr,across)
 importFrom(dplyr,anti_join)
 importFrom(dplyr,arrange)
