--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,7 @@ export(xml_to_ds_vars)
 export(xml_to_value_spec)
 export(xml_to_var_spec)
 import(R6)
+importFrom(cli,ansi_collapse)
 importFrom(cli,cli_abort)
 importFrom(cli,cli_alert_info)
 importFrom(cli,cli_alert_success)
@@ -89,6 +90,7 @@ importFrom(rlang,as_name)
 importFrom(rlang,as_string)
 importFrom(rlang,enexpr)
 importFrom(rlang,expr)
+importFrom(rlang,inherits_only)
 importFrom(rlang,prim_name)
 importFrom(rlang,sym)
 importFrom(stats,na.omit)
