--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ export(spec_type_to_ds_spec)
 export(spec_type_to_ds_vars)
 export(spec_type_to_value_spec)
 export(spec_type_to_var_spec)
+export(verify_DatasetMeta)
 export(xml_to_codelist)
 export(xml_to_derivations)
 export(xml_to_ds_spec)
