Output dataset keys. Update cli calls and documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,15 +34,15 @@ export(xml_to_var_spec)
 import(R6)
 importFrom(cli,ansi_collapse)
 importFrom(cli,cli_abort)
-importFrom(cli,cli_alert_info)
 importFrom(cli,cli_alert_success)
-importFrom(cli,cli_alert_warning)
 importFrom(cli,cli_bullets)
 importFrom(cli,cli_div)
 importFrom(cli,cli_end)
+importFrom(cli,cli_inform)
 importFrom(cli,cli_par)
 importFrom(cli,cli_rule)
 importFrom(cli,cli_text)
+importFrom(cli,cli_warn)
 importFrom(cli,col_red)
 importFrom(dplyr,across)
 importFrom(dplyr,anti_join)
