--- a/NAMESPACE
+++ b/NAMESPACE
@@ -44,6 +44,7 @@ importFrom(cli,cli_rule)
 importFrom(cli,cli_text)
 importFrom(cli,cli_warn)
 importFrom(cli,col_red)
+importFrom(cli,qty)
 importFrom(dplyr,across)
 importFrom(dplyr,anti_join)
 importFrom(dplyr,arrange)
@@ -93,6 +94,7 @@ importFrom(rlang,enexpr)
 importFrom(rlang,expr)
 importFrom(rlang,inherits_only)
 importFrom(rlang,prim_name)
+importFrom(rlang,set_names)
 importFrom(rlang,sym)
 importFrom(stats,na.omit)
 importFrom(stats,var)
