--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,19 @@
 Package: metacore
 Title: A Centralized Metadata Object Focus on Clinical Trial Data Programming Workflows
-Version: 0.1.3
+Version: 0.2.0
 Authors@R: 
-    c(person(given = "Christina",
-             family = "Fillmore",
+    c(person(given = "Liam",
+             family = "Hobby",
              role = c("aut", "cre"),
+             email = "liam.f.hobby@gsk.com"),
+      person(given = "Christina",
+             family = "Fillmore",
+             role = "aut",
              email = "christina.e.fillmore@gsk.com",
              comment = c(ORCID = "0000-0003-0595-2302")),
+      person(given = "Bill",
+             family = "Denney",
+             role = "aut"),
       person(given = "Maya",
              family = "Gans",
              role = "aut",
