--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,6 +34,7 @@ export(xml_to_var_spec)
 import(R6)
 importFrom(cli,ansi_collapse)
 importFrom(cli,cli_abort)
+importFrom(cli,cli_alert_info)
 importFrom(cli,cli_alert_success)
 importFrom(cli,cli_bullets)
 importFrom(cli,cli_div)
