Update package documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -69,6 +69,8 @@ importFrom(dplyr,rowwise)
 importFrom(dplyr,select)
 importFrom(dplyr,summarise)
 importFrom(dplyr,ungroup)
+importFrom(lifecycle,deprecate_soft)
+importFrom(lifecycle,deprecated)
 importFrom(magrittr,"%>%")
 importFrom(purrr,compact)
 importFrom(purrr,discard)
